lib/src/sdk/python/snapshots/usage__sdk__python__tests__python_flag_edge_cases-2.snap
---
source: lib/src/sdk/python/mod.rs
expression: client
---
# @generated by usage-cli from test.usage.kdl. Do not edit manually.
from __future__ import annotations
from typing import Optional
from .runtime import CliResult, CliRunner
from .types import ToolFlags

class Tool:
    def __init__(self, bin_path: str = "tool") -> None:
        self._runner = CliRunner(bin_path)

    def exec(self, flags: Optional[ToolFlags] = None) -> CliResult:
        """<FLAGS>"""
        cmd_args: list[str] = []
        flag_args = self._build_flag_args(flags)
        cmd_args.extend(flag_args)
        return self._runner.run(cmd_args)

    def _build_flag_args(self, flags: Optional[ToolFlags]) -> list[str]:
        result: list[str] = []
        if flags is None: return result
        if flags.v: result.append("-v")
        if flags._type: result.append("--type")
        if flags.level is not None and flags.level > 0: result.extend(["--level"] * flags.level)
        if flags._format is not None: result.extend(["--format", str(flags._format)])
        if flags.confirm: result.append("--confirm")
        if flags.verbose is not None:
            for v in flags.verbose:
                if v: result.append("--verbose")
        return result
