lib/src/sdk/python/snapshots/usage__sdk__python__tests__python_flag_edge_cases.snap
---
source: lib/src/sdk/python/mod.rs
expression: types
---
# @generated by usage-cli from test.usage.kdl. Do not edit manually.
from __future__ import annotations
from dataclasses import dataclass
from typing import Literal, Optional



@dataclass
class ToolFlags:
    # Required flag
    confirm: bool
    # Short-only flag. Short: -v
    v: Optional[bool] = None
    # Reserved keyword. Deprecated: Use --kind
    _type: Optional[bool] = None
    # Count flag with default
    level: int = 2
    # Value flag with default
    _format: Optional[str] = "json"
    # Repeatable boolean flag
    verbose: Optional[list[bool]] = None
