lib/src/sdk/python/snapshots/usage__sdk__python__tests__python_global_flags_flags_only.snap
---
source: lib/src/sdk/python/mod.rs
expression: client
---
# @generated by usage-cli from test.usage.kdl. Do not edit manually.
from __future__ import annotations
from typing import Optional
from .runtime import CliResult, CliRunner
from .types import AppFlags, GlobalFlags, StatusFlags

class App:
    def __init__(self, bin_path: str = "app") -> None:
        self._runner = CliRunner(bin_path)
        self.status = Status(self._runner)
        self.info = Info(self._runner)

    def exec(self, flags: Optional[AppFlags] = None) -> CliResult:
        """[-v --verbose] [SUBCOMMAND]"""
        cmd_args: list[str] = []
        flag_args = self._build_flag_args(flags)
        return self._runner.run(cmd_args + flag_args)

    def _build_flag_args(self, flags: Optional[AppFlags]) -> list[str]:
        result: list[str] = []
        if flags is None: return result
        if flags.verbose: result.append("--verbose")
        return result

class Status:
    """Show status"""
    def __init__(self, runner: CliRunner) -> None:
        self._runner = runner

    def exec(self, flags: Optional[StatusFlags] = None) -> CliResult:
        """status [--json]"""
        cmd_args: list[str] = ["status"]
        flag_args = self._build_flag_args(flags)
        return self._runner.run(cmd_args + flag_args)

    def _build_flag_args(self, flags: Optional[StatusFlags]) -> list[str]:
        result: list[str] = []
        if flags is None: return result
        if flags.verbose: result.append("--verbose")
        if flags.json: result.append("--json")
        return result

class Info:
    """Show info"""
    def __init__(self, runner: CliRunner) -> None:
        self._runner = runner

    def exec(self, flags: Optional[GlobalFlags] = None) -> CliResult:
        """info"""
        cmd_args: list[str] = ["info"]
        flag_args = self._build_flag_args(flags)
        return self._runner.run(cmd_args + flag_args)

    def _build_flag_args(self, flags: Optional[GlobalFlags]) -> list[str]:
        result: list[str] = []
        if flags is None: return result
        if flags.verbose: result.append("--verbose")
        return result
