lib/src/sdk/python/snapshots/usage__sdk__python__tests__python_global_repeatable_flags.snap
---
source: lib/src/sdk/python/mod.rs
expression: types
---
# @generated by usage-cli from test.usage.kdl. Do not edit manually.
from __future__ import annotations
from dataclasses import dataclass
from typing import Literal, Optional



@dataclass
class GlobalFlags:
    # Repeatable verbose. Short: -v
    verbose: Optional[list[bool]] = None
    # Repeatable tag
    tag: Optional[list[str]] = None


@dataclass
class AppFlags:
    # Repeatable verbose. Short: -v
    verbose: Optional[list[bool]] = None
    # Repeatable tag
    tag: Optional[list[str]] = None


@dataclass
class RunArgs:
    target: str
